5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1789_1598.log
== TEST (2019-05-29 18:16:59) 
-- CODE:
from numpy impor*
custo = array(eval(input("custo dos itens:")))
if(custo[i] > 80):
	print(sum(custo) - 5)
-- ERROR:
File "XXXX", line 1
    from numpy impor*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:08) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
if(custo[i] > 80):
	print(sum(custo) - 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:23) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
if(custo[i] > 80):
	print(sum(custo) - 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
if(custo > 80):
	print(round(2, sum(custo) - 5))
else:
	print(round(2,sum(custo)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:36) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
if(custo[] > 80):
	print(round(2, sum(custo) - 5))
else:
	print(round(2,sum(custo)))
-- ERROR:
File "XXXX", line 3
    if(custo[] > 80):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:33) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
elif:
	print(round(2,sum(custo)))
	i = i + 1
-- ERROR:
File "XXXX", line 5
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:50) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
	while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
elif:
	print(round(2,sum(custo)))
	i = i + 1
-- ERROR:
File "XXXX", line 3
    while(custo[i] > 80):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:16) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))

	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:49) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:22) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:38) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:27:33) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:49) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:59) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
while(custo[i] > 80):
	print(round(2, sum(custo) - 5))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:21) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] > 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:38) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] > 80):
	print(round(2, desconto))
	i = i + 1
	print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:16) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:32) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] > 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:03) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:16) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:50) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:54) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:12) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:30) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(2, desconto))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:51) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:04) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
	print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:52) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:06) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:23) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:38:56) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[0:-1] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:39) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
size(custo)
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:42:26) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- EXECUTION TIME:
0.440742
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:34) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:18) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:32) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:33) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:33) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:33) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:40) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:00) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:21) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:50) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))

-- ERROR:
File "XXXX", line 6
    while(custo[i] >= 80):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:01) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
	while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))

-- ERROR:
File "XXXX", line 7
    print(round(desconto, 2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:07) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
	while(custo[i] >= 80):
		print(round(desconto, 2))
		i = i + 1
print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:25) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
	while(custo[i] >= 80):
		print(round(desconto, 2))
		i = i + 1
	print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:36) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
	while(custo[i] >= 80):
		print(round(desconto, 2))
		i = i + 1
	print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:44) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
if(size(custo) > 0):
	while(custo[i] >= 80):
		print(round(desconto, 2))
		i = i + 1
print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:37) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:01) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:32) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
	else:
		print(sum(custo))

-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:44) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:55) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(sum(custo))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:31) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:42) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:45) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:53) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:55) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:23:17) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[0;-1] >= 80):
	print(round(desconto, 2))
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
File "XXXX", line 5
    while(custo[0;-1] >= 80):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:26:23) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo) - 5
while(custo[i] >= 80):
	desconto
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:39) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(custo[i] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
else:
	print(round(sum(custo), 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:59) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(custo[i] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
else:
	print(round(desconto, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(custo[i] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:30:12) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while():
if(custo[i] >= 80)
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- EXECUTION TIME:
0.192926
-- ERROR:
  File "/home/codebench/codes/1789/1598/main.py", line 6
    if(custo[i] >= 80)
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:30:13) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while():
if(custo[i] >= 80)
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[i] >= 80)
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:35) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0;-1]):
if(custo[i] >= 80)
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 5
    while(size[0;-1]):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:45) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0:-1]):
if(custo[i] >= 80)
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[i] >= 80)
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:35:15) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0:-1]):
	if(custo[i] >= 80)
		desconto = sum(custo) - 5 
		i = i + 1
	print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[i] >= 80)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:35:26) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0:-1]):
if(custo[i] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[i] >= 80):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:36:07) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0:-1]):
if(custo[0:-1] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[0:-1] >= 80):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:31) 
-- CODE:
from numpy import*
custo = array(eval(input("custo dos itens:")))
i = 0
desconto = sum(custo)
while(size[0:-1]):
if(custo[i] >= 80):
	desconto = sum(custo) - 5 
	i = i + 1
print(round(desconto, 2))

-- ERROR:
File "XXXX", line 6
    if(custo[i] >= 80):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
